--- a/examples/object_detection/android/app/src/main/res/values/strings.xml
+++ b/examples/object_detection/android/app/src/main/res/values/strings.xml
@@ -50,5 +50,6 @@
     <string-array name="models_spinner_titles">
         <item>EfficientDet Lite0</item>
         <item>EfficientDet Lite2</item>
+        <item>MobileNetV2</item>
     </string-array>
 </resources>
