--- a/examples/customization/face_stylizer.ipynb
+++ b/examples/customization/face_stylizer.ipynb
@@ -264,7 +264,7 @@
         "iterator = iter(eval_output_data)\n",
         "\n",
         "reconstruct_style_image = (tf.squeeze(iterator.get_next()).numpy())\n",
-        "test_output_image = cv2.cvtColor(output_image, cv2.COLOR_RGB2BGR)\n",
+        "test_output_image = cv2.cvtColor(reconstruct_style_image, cv2.COLOR_RGB2BGR)\n",
         "print('\\nReconstructed style image')\n",
         "cv2_imshow(test_output_image)"
       ],
