--- a/examples/llm_inference/android/app/src/main/res/values/strings.xml
+++ b/examples/llm_inference/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">LLM Inference</string>
+    <string name="app_name">MediaPipe LLM Inference</string>
+    <string name="loading_model">Loading model</string>
+    <string name="chat_label">Message</string>
+    <string name="action_send">Send</string>
 </resources>
