This commit removes the previously hardcoded version "0.10.0" and retrieve the latest available version. This ensures the application always benefits from the newest features and performance improvements.

--- a/examples/hand_landmarker/python/hand_landmarker.ipynb
+++ b/examples/hand_landmarker/python/hand_landmarker.ipynb
@@ -60,7 +60,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install -q mediapipe==0.10.0"
+        "!pip install -q mediapipe"
       ]
     },
     {
@@ -262,10 +262,10 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": [],
       "collapsed_sections": [
         "h2q27gKz1H20"
-      ]
+      ],
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
