--- a/examples/interactive_segmentation/python/interactive_segmenter.ipynb
+++ b/examples/interactive_segmentation/python/interactive_segmenter.ipynb
@@ -49,7 +49,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install -q mediapipe==0.10.0"
+        "!pip install -q mediapipe"
       ]
     },
     {
