--- a/examples/language_detector/python/[MediaPipe_Python_Tasks]_Language_Detector.ipynb
+++ b/examples/language_detector/python/[MediaPipe_Python_Tasks]_Language_Detector.ipynb
@@ -60,7 +60,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install -q mediapipe==0.10.0"
+        "!pip install -q mediapipe"
       ]
     },
     {
@@ -98,6 +98,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "mhql0IPCcDBs"
+      },
       "source": [
         "You can try the following examples to try the API out or enter your own text\n",
         "in the text bar.\n",
@@ -109,10 +112,7 @@
         "* **Russian** - это какой-то английский язык\n",
         "\n",
         "* **Mixed** - 分久必合合久必分"
-      ],
-      "metadata": {
-        "id": "mhql0IPCcDBs"
-      }
+      ]
     },
     {
       "cell_type": "code",
