--- a/examples/pose_landmarker/python/[MediaPipe_Python_Tasks]_Pose_Landmarker.ipynb
+++ b/examples/pose_landmarker/python/[MediaPipe_Python_Tasks]_Pose_Landmarker.ipynb
@@ -61,7 +61,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install -q mediapipe==0.10.0"
+        "!pip install -q mediapipe"
       ]
     },
     {
@@ -233,34 +233,34 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Visualize the pose segmentation mask."
-      ],
       "metadata": {
         "id": "_BwzFvaxwtPX"
-      }
+      },
+      "source": [
+        "Visualize the pose segmentation mask."
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "3jAIFzw9M3JJ"
+      },
+      "outputs": [],
       "source": [
         "segmentation_mask = detection_result.segmentation_masks[0].numpy_view()\n",
         "visualized_mask = np.repeat(segmentation_mask[:, :, np.newaxis], 3, axis=2) * 255\n",
         "cv2_imshow(visualized_mask)"
-      ],
-      "metadata": {
-        "id": "3jAIFzw9M3JJ"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "QipRi2ozw7cg"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
