--- a/examples/audio_classifier/python/audio_classification.ipynb
+++ b/examples/audio_classifier/python/audio_classification.ipynb
@@ -61,7 +61,7 @@
       "outputs": [],
       "source": [
         "!pip install -q sounddevice==0.4.4\n",
-        "!pip install -q mediapipe==0.10.0"
+        "!pip install -q mediapipe"
       ]
     },
     {
