--- a/examples/image_segmentation/python/image_segmentation.ipynb
+++ b/examples/image_segmentation/python/image_segmentation.ipynb
@@ -58,7 +58,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install -q mediapipe==0.10.0"
+        "!pip install -q mediapipe"
       ]
     },
     {
