Pin Keras to version 2

--- a/tutorials/object_detection/Object_Detection_for_3_dogs.ipynb
+++ b/tutorials/object_detection/Object_Detection_for_3_dogs.ipynb
@@ -74,7 +74,8 @@
       "outputs": [],
       "source": [
         "!pip install --upgrade pip\n",
-        "!pip install mediapipe-model-maker"
+        "!pip install 'keras<3.0.0'",
+        "!pip install mediapipe-model-maker",
       ]
     },
     {
