--- a/tutorials/object_detection/Object_Detection_for_3_dogs.ipynb
+++ b/tutorials/object_detection/Object_Detection_for_3_dogs.ipynb
@@ -75,7 +75,7 @@
       "source": [
         "!pip install --upgrade pip\n",
         "!pip install 'keras<3.0.0'",
-        "!pip install mediapipe-model-maker",
+        "!pip install mediapipe-model-maker"
       ]
     },
     {
