--- a/tutorials/object_detection/Object_Detection_for_3_dogs.ipynb
+++ b/tutorials/object_detection/Object_Detection_for_3_dogs.ipynb
@@ -74,7 +74,7 @@
       "outputs": [],
       "source": [
         "!pip install --upgrade pip\n",
-        "!pip install 'keras<3.0.0'",
+        "!pip install 'keras<3.0.0'\n",
         "!pip install mediapipe-model-maker"
       ]
     },
