Updated Python to work with MediaPipe 0.10.14
- Fixed an issue with wget returning a 429 error for imgur URLs

--- a/examples/face_detector/python/face_detector.ipynb
+++ b/examples/face_detector/python/face_detector.ipynb
@@ -202,7 +202,7 @@
       },
       "outputs": [],
       "source": [
-        "!wget -q -O image.jpg https://i.imgur.com/Vu2Nqwb.jpg\n",
+        "!curl https://i.imgur.com/Vu2Nqwb.jpeg -s -o image.jpg\n",
         "\n",
         "IMAGE_FILE = 'image.jpg'\n",
         "\n",
