--- a/examples/face_landmarker/python/[MediaPipe_Python_Tasks]_Face_Landmarker.ipynb
+++ b/examples/face_landmarker/python/[MediaPipe_Python_Tasks]_Face_Landmarker.ipynb
@@ -61,7 +61,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install mediapipe"
+        "!pip install -q mediapipe"
       ]
     },
     {
