--- a/examples/face_stylizer/python/face_stylizer.ipynb
+++ b/examples/face_stylizer/python/face_stylizer.ipynb
@@ -59,7 +59,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install mediapipe"
+        "!pip install -q mediapipe"
       ]
     },
     {
