--- a/examples/llm_inference/conversion/llm_conversion.ipynb
+++ b/examples/llm_inference/conversion/llm_conversion.ipynb
@@ -757,7 +757,7 @@
         "# @title Run { display-mode: \"form\"}\n",
         "\n",
         "model = widgets.Dropdown(\n",
-        "    options=[\"Gemma 2B\", \"Falcon 1B\", \"StableLM 3B\", \"Phi 2\"],\n",
+        "    options=[\"Gemma 2B\",\"Gemma 7B\", \"Falcon 1B\", \"StableLM 3B\", \"Phi 2\"],\n",
         "    value='Gemma 2B',\n",
         "    description='model',\n",
         "    disabled=False,\n",
@@ -777,16 +777,34 @@
         "    disabled=False\n",
         ")\n",
         "\n",
-        "def on_change_model(change):\n",
-        "  if change[\"new\"] != 'Gemma 2b':\n",
-        "    token_description.layout.display = \"none\"\n",
-        "    token.layout.display = \"none\"\n",
+        "options_mapping = {\n",
+        "              'Gemma 2B': ['cpu', 'gpu'],\n",
+        "              'Gemma 7B': ['gpu'],\n",
+        "              'Falcon 1B': ['cpu', 'gpu'],\n",
+        "              'StableLM 3B': ['cpu', 'gpu'],\n",
+        "              'Phi 2': ['cpu', 'gpu']\n",
+        "}\n,
+        "\n",
+        "def on_use_gpu(change):\n",
+        "  selected_value = change['new']\n",
+        "\n",
+        "  if selected_value in options_mapping:\n",
+        "    backend.options = options_mapping[selected_value]\n",
+        "    backend.value = options_mapping[selected_value][0]\n",
         "  else:\n",
-        "    token_description.layout.display = \"flex\"\n",
-        "    token.layout.display = \"flex\"\n",
+        "    token.options = []\n",
+        "    token.value = None\n",
         "\n",
-        "model.observe(on_change_model, names=['value'])\n",
+        "def on_change_model(change):\n",
+        "  selected_values = ['Gemma 2B','Gemma 7B']\n",
         "\n",
+        "  if change['new'] in selected_values:\n",
+        "    token.layout.display = 'flex'\n",
+        "  else:\n",
+        "    token.layout.display = 'none'\n",
+        "\n",
+        "model.observe(on_change_model, names='value')\n",
+        "model.observe(on_use_gpu, names='value')\n",
         "\n",
         "\n",
         "display(model)\n",
