--- a/examples/llm_inference/conversion/llm_conversion.ipynb
+++ b/examples/llm_inference/conversion/llm_conversion.ipynb
@@ -783,7 +783,7 @@
         "              'Falcon 1B': ['cpu', 'gpu'],\n",
         "              'StableLM 3B': ['cpu', 'gpu'],\n",
         "              'Phi 2': ['cpu', 'gpu']\n",
-        "}\n,
+        "}\n",
         "\n",
         "def on_use_gpu(change):\n",
         "  selected_value = change['new']\n",
@@ -820,13 +820,21 @@
         "\n",
         "\n",
         "\n",
-        "def gemma_download(token):\n",
+        "def gemma2b_download(token):\n",
         "  REPO_ID = \"google/gemma-2b-it\"\n",
         "  FILENAMES = [\"tokenizer.json\", \"tokenizer_config.json\", \"model-00001-of-00002.safetensors\", \"model-00002-of-00002.safetensors\"]\n",
         "  os.environ['HF_TOKEN'] = token\n",
         "  with out:\n",
         "    for filename in FILENAMES:\n",
         "      hf_hub_download(repo_id=REPO_ID, filename=filename, local_dir=\"./gemma-2b-it\")\n",
+        "\n",
+        "def gemma7b_download(token):\n",
+        "  REPO_ID = \"google/gemma-1.1-7b-it\"\n",
+        "  FILENAMES = [\"tokenizer.json\", \"tokenizer_config.json\", \"model-00001-of-00004.safetensors\", \"model-00002-of-00004.safetensors\", \"model-00003-of-00004.safetensors\", \"model-00004-of-00004.safetensors\"]\n",
+        "  os.environ['HF_TOKEN'] = token\n",
+        "  with out:\n",
+        "    for filename in FILENAMES:\n",
+        "      hf_hub_download(repo_id=REPO_ID, filename=filename, local_dir=\"./gemma-1.1-7b-it\")\n",
         "\n",
         "def falcon_download():\n",
         "  REPO_ID = \"tiiuae/falcon-rw-1b\"\n",
@@ -850,12 +858,19 @@
         "      hf_hub_download(repo_id=REPO_ID, filename=filename, local_dir=\"./phi-2\")\n",
         "\n",
         "\n",
-        "def gemma_convert_config(backend):\n",
+        "def gemma2b_convert_config(backend):\n",
         "  input_ckpt = '/content/gemma-2b-it/'\n",
         "  vocab_model_file = '/content/gemma-2b-it/'\n",
         "  output_dir = '/content/intermediate/gemma-2b-it/'\n",
         "  output_tflite_file = f'/content/converted_models/gemma_{backend}.bin'\n",
         "  return converter.ConversionConfig(input_ckpt=input_ckpt, ckpt_format='safetensors', model_type='GEMMA_2B', backend=backend, output_dir=output_dir, combine_file_only=False, vocab_model_file=vocab_model_file, output_tflite_file=output_tflite_file)\n",
+        "\n",
+        "def gemma7b_convert_config(backend):\n",
+        "  input_ckpt = '/content//gemma-1.1-7b-it/'\n",
+        "  vocab_model_file = '/content//gemma-1.1-7b-it/'\n",
+        "  output_dir = '/content/intermediate//gemma-1.1-7b-it/'\n",
+        "  output_tflite_file = f'/content/converted_models/gemma_{backend}.bin'\n",
+        "  return converter.ConversionConfig(input_ckpt=input_ckpt, ckpt_format='safetensors', model_type='GEMMA_7B', backend=backend, output_dir=output_dir, combine_file_only=False, vocab_model_file=vocab_model_file, output_tflite_file=output_tflite_file)\n",
         "\n",
         "def falcon_convert_config(backend):\n",
         "  input_ckpt = '/content/falcon-rw-1b/pytorch_model.bin'\n",
@@ -892,7 +907,9 @@
         "    backend.disabled = True\n",
         "\n",
         "    if model.value == 'Gemma 2B':\n",
-        "      gemma_download(token.value)\n",
+        "      gemma2b_download(token.value)\n",
+        "    elif model.value == 'Gemma 7B':\n",
+        "      gemma7b_download(token.value)\n",
         "    elif model.value == 'Falcon 1B':\n",
         "      falcon_download()\n",
         "    elif model.value == 'StableLM 3B':\n",
@@ -909,7 +926,9 @@
         "    button.description = \"Converting ...\"\n",
         "\n",
         "    if model.value == 'Gemma 2B':\n",
-        "      config = gemma_convert_config(backend.value)\n",
+        "      config = gemma2b_convert_config(backend.value)\n",
+        "    elif model.value == 'Gemma 7B':\n",
+        "      config = gemma7b_convert_config(backend.value)\n",
         "    elif model.value == 'Falcon 1B':\n",
         "      config = falcon_convert_config(backend.value)\n",
         "    elif model.value == 'StableLM 3B':\n",
