Update object_detector.ipynb: fix a typo

--- a/examples/customization/object_detector.ipynb
+++ b/examples/customization/object_detector.ipynb
@@ -363,7 +363,7 @@
       "source": [
         "## Retrain model\n",
         "\n",
-        "Once you have completed preparing your data, you can begin retraining a model to recognize the new objects, or classes, defined by your training data. The instructions below use the data prepared in the previous section to retrain an image classification model to recognize the two types of android figurines."
+        "Once you have completed preparing your data, you can begin retraining a model to recognize the new objects, or classes, defined by your training data. The instructions below use the data prepared in the previous section to retrain an object detection model to recognize the two types of android figurines."
       ]
     },
     {
