--- a/codelabs/litert_inference/Gemma3_1b_fine_tune.ipynb
+++ b/codelabs/litert_inference/Gemma3_1b_fine_tune.ipynb
@@ -118,7 +118,7 @@
         "!pip3 install --upgrade -q -U trl\n",
         "!pip3 install --upgrade -q -U accelerate\n",
         "!pip3 install --upgrade -q -U datasets\n",
-        "!pip3 install git+https://github.com/huggingface/transformers@v4.49.0-Gemma-3"
+        "!pip3 install --force-reinstall transformers"
       ],
       "metadata": {
         "id": "WQUK_YNLZPnW"
@@ -277,7 +277,7 @@
         "\n",
         "trainer = SFTTrainer(\n",
         "    model=model,\n",
-        "    tokenizer = tokenizer,\n",
+        "    processing_class=tokenizer,\n",
         "    train_dataset = ds['train'],\n",
         "    args=transformers.TrainingArguments(\n",
         "        per_device_train_batch_size=1,\n",
@@ -414,13 +414,21 @@
     {
       "cell_type": "code",
       "source": [
-        "from ai_edge_torch.generative.examples.gemma3 import gemma3\n",
-        "from ai_edge_torch.generative.utilities import converter\n",
-        "from ai_edge_torch.generative.utilities.model_builder import ExportConfig\n",
-        "from ai_edge_torch.generative.layers.experimental import kv_cache\n",
-        "\n",
+        "from absl import flags\n",
+        "from absl import app\n",
+        "import sys\n",
         "import torch\n",
         "\n",
+        "from ai_edge_torch.generative.examples.gemma3 import gemma3\n",
+        "from ai_edge_torch.generative.layers import kv_cache\n",
+        "from ai_edge_torch.generative.utilities import converter\n",
+        "from ai_edge_torch.generative.utilities.export_config import ExportConfig\n",
+        "\n",
+        "\n",
+        "flags = converter.define_conversion_flags('gemma3-1b')\n",
+        "flags.FLAGS.mask_as_input = True\n",
+        "flags.FLAGS.prefill_seq_lens = [128]\n",
+        "flags.FLAGS.kv_cache_max_len = 1024\n",
         "\n",
         "def _create_mask(mask_len, kv_cache_max_len):\n",
         "  mask = torch.full(\n",
@@ -447,24 +455,31 @@
         "  )\n",
         "  decode_mask = torch.triu(decode_mask, diagonal=1).unsqueeze(0).unsqueeze(0)\n",
         "  export_config.decode_mask = decode_mask\n",
-        "  export_config.kvcache_cls = kv_cache.KVCacheTransposed\n",
+        "  export_config.kvcache_layout = kv_cache.KV_LAYOUT_TRANSPOSED\n",
         "  return export_config\n",
         "\n",
-        "with torch.inference_mode(True):\n",
-        "  pytorch_model = gemma3.build_model_1b(\n",
-        "    \"/content/merged_model\", kv_cache_max_len=1024,\n",
-        "  )\n",
-        "  converter.convert_to_tflite(\n",
-        "      pytorch_model,\n",
-        "      output_path=\"/content/\",\n",
-        "      output_name_prefix=\"gemma3_1b_finetune\",\n",
-        "      prefill_seq_len=[128],\n",
-        "      quantize=True,\n",
-        "      lora_ranks=None,\n",
-        "      export_config=_create_export_config(\n",
-        "          [128], 1024\n",
-        "      ),\n",
-        "  )"
+        "\n",
+        "def convert_to_litert(_):\n",
+        "  with torch.inference_mode(True):\n",
+        "    pytorch_model = gemma3.build_model_1b(\n",
+        "      \"/content/merged_model\", kv_cache_max_len=flags.FLAGS.kv_cache_max_len,\n",
+        "    )\n",
+        "    converter.convert_to_tflite(\n",
+        "        pytorch_model,\n",
+        "        output_path=\"/content/\",\n",
+        "        output_name_prefix=\"gemma3_1b_finetune\",\n",
+        "        prefill_seq_len=flags.FLAGS.prefill_seq_lens,\n",
+        "        quantize=True,\n",
+        "        lora_ranks=None,\n",
+        "        export_config=_create_export_config(\n",
+        "            prefill_seq_lens=flags.FLAGS.prefill_seq_lens,\n",
+        "            kv_cache_max_len=flags.FLAGS.kv_cache_max_len,\n",
+        "        ),\n",
+        "    )\n",
+        "\n",
+        "# Ignore flags passed from the colab runtime.\n",
+        "sys.argv = sys.argv[:1]\n",
+        "app.run(convert_to_litert)"
       ],
       "metadata": {
         "id": "xTCQEekaXoZZ"
