update quantization call to work with the new API

--- a/codelabs/litert_inference/Gemma3_1b_fine_tune.ipynb
+++ b/codelabs/litert_inference/Gemma3_1b_fine_tune.ipynb
@@ -405,7 +405,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Now let's convert and quantize our model to LiteRT format, this will take roughly 10+ minutes to finish. The output tflite will be saved in the \"/content\" subfolder, with the name \"gemma3_1b_finetune_q8_ekv1024.tflite\""
+        "Now let's convert our model(including 8-bit quantization) to LiteRT format, this will take roughly 10+ minutes to finish. The output tflite will be saved in the \"/content\" subfolder, with the name \"gemma3_1b_finetune_q8_ekv1024.tflite\""
       ],
       "metadata": {
         "id": "r3XJyw083lnE"
@@ -456,25 +456,9 @@
         "  decode_mask = torch.triu(decode_mask, diagonal=1).unsqueeze(0).unsqueeze(0)\n",
         "  export_config.decode_mask = decode_mask\n",
         "  export_config.kvcache_layout = kv_cache.KV_LAYOUT_TRANSPOSED\n",
-        "  return export_config\n"
-      ],
-      "metadata": {
-        "id": "xTCQEekaXoZZ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "HJ60zCnBAeYH"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Convert and quantize the model to dynamic int8\n",
+        "  return export_config\n",
+        "\n",
+        "\n",
         "def convert_to_litert(_):\n",
         "  with torch.inference_mode(True):\n",
         "    pytorch_model = gemma3.build_model_1b(\n",
@@ -485,7 +469,7 @@
         "        output_path=\"/content/\",\n",
         "        output_name_prefix=\"gemma3_1b_finetune\",\n",
         "        prefill_seq_len=flags.FLAGS.prefill_seq_lens,\n",
-        "        quantize='dynamic_int8',\n",
+        "        quantize=converter.QuantizationName.DYNAMIC_INT4_BLOCK32,\n",
         "        lora_ranks=None,\n",
         "        export_config=_create_export_config(\n",
         "            prefill_seq_lens=flags.FLAGS.prefill_seq_lens,\n",
@@ -498,7 +482,7 @@
         "app.run(convert_to_litert)"
       ],
       "metadata": {
-        "id": "llAKsl9gAVsG"
+        "id": "xTCQEekaXoZZ"
       },
       "execution_count": null,
       "outputs": []
