--- a/codelabs/litert_inference/gemma3_1b_tflite.ipynb
+++ b/codelabs/litert_inference/gemma3_1b_tflite.ipynb
@@ -73,7 +73,7 @@
         "\n",
         "  - litert-community/Gemma3-1B-IT\n",
         "\n",
-        "  This is needed to download the tflite model and tokenizer.\n",
+        "  This is needed to download the tflite model.\n",
         "\n",
         "- Open Colab Secrets: In your Google Colab notebook, locate the Secrets icon in the left-hand sidebar and click on it.\n",
         "- Add a new secret: Click the \"Add Secret\" button.\n",
