--- a/codelabs/litert_inference/Gemma3_1b_fine_tune.ipynb
+++ b/codelabs/litert_inference/Gemma3_1b_fine_tune.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "A100",
+      "gpuType": "T4",
       "machine_shape": "hm"
     },
     "kernelspec": {
@@ -107,7 +107,7 @@
       "metadata": {
         "id": "I36jgF9oZx0_"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -121,10 +121,39 @@
         "!pip3 install --force-reinstall transformers"
       ],
       "metadata": {
-        "id": "WQUK_YNLZPnW"
+        "id": "WQUK_YNLZPnW",
+        "outputId": "e972f562-6e72-45e2-975f-d24ffa74bbe8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+            "gcsfs 2025.3.2 requires fsspec==2025.3.2, but you have fsspec 2025.3.0 which is incompatible.\u001b[0m\u001b[31m\n",
+            "\u001b[0mCollecting transformers\n",
+            "  Using cached transformers-4.52.3-py3-none-any.whl.metadata (40 kB)\n",
+            "Collecting filelock (from transformers)\n",
+            "  Using cached filelock-3.18.0-py3-none-any.whl.metadata (2.9 kB)\n",
+            "Collecting huggingface-hub<1.0,>=0.30.0 (from transformers)\n",
+            "  Using cached huggingface_hub-0.32.2-py3-none-any.whl.metadata (14 kB)\n",
+            "Collecting numpy>=1.17 (from transformers)\n",
+            "  Using cached numpy-2.2.6-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (62 kB)\n",
+            "Collecting packaging>=20.0 (from transformers)\n",
+            "  Using cached packaging-25.0-py3-none-any.whl.metadata (3.3 kB)\n",
+            "Collecting pyyaml>=5.1 (from transformers)\n",
+            "  Using cached PyYAML-6.0.2-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (2.1 kB)\n",
+            "Collecting regex!=2019.12.17 (from transformers)\n",
+            "  Using cached regex-2024.11.6-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (40 kB)\n",
+            "Collecting requests (from transformers)\n",
+            "  Using cached requests-2.32.3-py3-none-any.whl.metadata (4.6 kB)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
