--- a/codelabs/litert_inference/Gemma3_1b_fine_tune.ipynb
+++ b/codelabs/litert_inference/Gemma3_1b_fine_tune.ipynb
@@ -4,8 +4,9 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
-      "machine_shape": "hm"
+      "gpuType": "A100",
+      "machine_shape": "hm",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -17,6 +18,16 @@
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/google-ai-edge/mediapipe-samples/blob/quantization_sample/codelabs/litert_inference/Gemma3_1b_fine_tune.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -107,7 +118,7 @@
       "metadata": {
         "id": "I36jgF9oZx0_"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -117,43 +128,13 @@
         "!pip3 install --upgrade -q -U peft\n",
         "!pip3 install --upgrade -q -U trl\n",
         "!pip3 install --upgrade -q -U accelerate\n",
-        "!pip3 install --upgrade -q -U datasets\n",
-        "!pip3 install --force-reinstall transformers"
+        "!pip3 install --upgrade -q -U datasets"
       ],
       "metadata": {
-        "id": "WQUK_YNLZPnW",
-        "outputId": "e972f562-6e72-45e2-975f-d24ffa74bbe8",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "WQUK_YNLZPnW"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-            "gcsfs 2025.3.2 requires fsspec==2025.3.2, but you have fsspec 2025.3.0 which is incompatible.\u001b[0m\u001b[31m\n",
-            "\u001b[0mCollecting transformers\n",
-            "  Using cached transformers-4.52.3-py3-none-any.whl.metadata (40 kB)\n",
-            "Collecting filelock (from transformers)\n",
-            "  Using cached filelock-3.18.0-py3-none-any.whl.metadata (2.9 kB)\n",
-            "Collecting huggingface-hub<1.0,>=0.30.0 (from transformers)\n",
-            "  Using cached huggingface_hub-0.32.2-py3-none-any.whl.metadata (14 kB)\n",
-            "Collecting numpy>=1.17 (from transformers)\n",
-            "  Using cached numpy-2.2.6-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (62 kB)\n",
-            "Collecting packaging>=20.0 (from transformers)\n",
-            "  Using cached packaging-25.0-py3-none-any.whl.metadata (3.3 kB)\n",
-            "Collecting pyyaml>=5.1 (from transformers)\n",
-            "  Using cached PyYAML-6.0.2-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (2.1 kB)\n",
-            "Collecting regex!=2019.12.17 (from transformers)\n",
-            "  Using cached regex-2024.11.6-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (40 kB)\n",
-            "Collecting requests (from transformers)\n",
-            "  Using cached requests-2.32.3-py3-none-any.whl.metadata (4.6 kB)\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -164,6 +145,15 @@
       ],
       "metadata": {
         "id": "_2zWjAjDXHs3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "8qiYoaijpYIZ"
       },
       "execution_count": null,
       "outputs": []
