--- a/codelabs/litert_inference/Gemma3_1b_fine_tune.ipynb
+++ b/codelabs/litert_inference/Gemma3_1b_fine_tune.ipynb
@@ -100,25 +100,13 @@
     {
       "cell_type": "code",
       "source": [
-        "import os\n",
-        "from google.colab import userdata\n",
-        "os.environ[\"HF_TOKEN\"] = userdata.get('HF_TOKEN')"
-      ],
-      "metadata": {
-        "id": "I36jgF9oZx0_"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!pip3 install --upgrade -q -U bitsandbytes\n",
-        "!pip3 install --upgrade -q -U peft\n",
-        "!pip3 install --upgrade -q -U trl\n",
-        "!pip3 install --upgrade -q -U accelerate\n",
-        "!pip3 install --upgrade -q -U datasets\n",
-        "!pip3 install --force-reinstall transformers"
+        "!pip3 install --upgrade -q -U bitsandbytes==0.46.0\n",
+        "!pip3 install --upgrade -q -U peft==0.15.2\n",
+        "!pip3 install --upgrade -q -U trl==0.18.1\n",
+        "!pip3 install --upgrade -q -U accelerate==1.7.0\n",
+        "!pip3 install --upgrade -q -U datasets==3.6.0\n",
+        "!pip3 install --upgrade -q -U numpy==2.2.6\n",
+        "!pip3 install --force-reinstall transformers==4.52.3"
       ],
       "metadata": {
         "id": "WQUK_YNLZPnW"
@@ -129,12 +117,25 @@
     {
       "cell_type": "code",
       "source": [
-        "! pip install git+https://github.com/google-ai-edge/ai-edge-torch\n",
-        "! pip install ai-edge-litert\n",
-        "! pip install mediapipe"
+        "! pip3 install ai-edge-torch-nightly==0.6.0.dev20250523\n",
+        "! pip3 install ai-edge-litert==1.3.0\n",
+        "! pip3 install mediapipe==0.10.21"
       ],
       "metadata": {
         "id": "_2zWjAjDXHs3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "from google.colab import userdata\n",
+        "os.environ[\"HF_TOKEN\"] = userdata.get('HF_TOKEN')"
+      ],
+      "metadata": {
+        "id": "I36jgF9oZx0_"
       },
       "execution_count": null,
       "outputs": []
@@ -414,9 +415,6 @@
     {
       "cell_type": "code",
       "source": [
-        "from absl import flags\n",
-        "from absl import app\n",
-        "import sys\n",
         "import torch\n",
         "\n",
         "from ai_edge_torch.generative.examples.gemma3 import gemma3\n",
@@ -425,10 +423,8 @@
         "from ai_edge_torch.generative.utilities.export_config import ExportConfig\n",
         "\n",
         "\n",
-        "flags = converter.define_conversion_flags('gemma3-1b')\n",
-        "flags.FLAGS.mask_as_input = True\n",
-        "flags.FLAGS.prefill_seq_lens = [128]\n",
-        "flags.FLAGS.kv_cache_max_len = 1024\n",
+        "PREFILL_SEQ_LENS = [128]\n",
+        "KV_CACHE_MAX_LEN = 1024\n",
         "\n",
         "def _create_mask(mask_len, kv_cache_max_len):\n",
         "  mask = torch.full(\n",
@@ -456,30 +452,30 @@
         "  decode_mask = torch.triu(decode_mask, diagonal=1).unsqueeze(0).unsqueeze(0)\n",
         "  export_config.decode_mask = decode_mask\n",
         "  export_config.kvcache_layout = kv_cache.KV_LAYOUT_TRANSPOSED\n",
+        "  export_config.mask_as_input = True\n",
         "  return export_config\n",
         "\n",
         "\n",
-        "def convert_to_litert(_):\n",
+        "def convert_to_litert():\n",
         "  with torch.inference_mode(True):\n",
         "    pytorch_model = gemma3.build_model_1b(\n",
-        "      \"/content/merged_model\", kv_cache_max_len=flags.FLAGS.kv_cache_max_len,\n",
+        "      \"/content/merged_model\", kv_cache_max_len=KV_CACHE_MAX_LEN,\n",
         "    )\n",
         "    converter.convert_to_tflite(\n",
         "        pytorch_model,\n",
         "        output_path=\"/content/\",\n",
         "        output_name_prefix=\"gemma3_1b_finetune\",\n",
-        "        prefill_seq_len=flags.FLAGS.prefill_seq_lens,\n",
+        "        prefill_seq_len=PREFILL_SEQ_LENS,\n",
         "        quantize=converter.QuantizationName.DYNAMIC_INT4_BLOCK32,\n",
         "        lora_ranks=None,\n",
         "        export_config=_create_export_config(\n",
-        "            prefill_seq_lens=flags.FLAGS.prefill_seq_lens,\n",
-        "            kv_cache_max_len=flags.FLAGS.kv_cache_max_len,\n",
+        "            prefill_seq_lens=PREFILL_SEQ_LENS,\n",
+        "            kv_cache_max_len=KV_CACHE_MAX_LEN,\n",
         "        ),\n",
         "    )\n",
         "\n",
-        "# Ignore flags passed from the colab runtime.\n",
-        "sys.argv = sys.argv[:1]\n",
-        "app.run(convert_to_litert)"
+        "# Run model conversion.\n",
+        "convert_to_litert()"
       ],
       "metadata": {
         "id": "xTCQEekaXoZZ"
@@ -522,7 +518,7 @@
       "source": [
         "interpreter = interpreter_lib.InterpreterWithCustomOps(\n",
         "    custom_op_registerers=[\"pywrap_genai_ops.GenAIOpsRegisterer\"],\n",
-        "    model_path=\"/content/gemma3_1b_finetune_q8_ekv1024.tflite\",\n",
+        "    model_path=\"/content/gemma3_1b_finetune_q4_block32_ekv1024.tflite\",\n",
         "    num_threads=2,\n",
         "    experimental_default_delegate_latest_features=True)"
       ],
@@ -844,13 +840,17 @@
     {
       "cell_type": "code",
       "source": [
+        "import os\n",
+        "from google.colab import userdata\n",
         "from huggingface_hub import hf_hub_download\n",
         "import joblib\n",
         "\n",
-        "REPO_ID = \"google/gemma-3-1b\"\n",
+        "REPO_ID = \"google/gemma-3-1b-it\"\n",
         "FILENAME = \"tokenizer.model\"\n",
+        "os.environ[\"HF_TOKEN\"] = userdata.get('HF_TOKEN')\n",
+        "\n",
         "tokenizer_model = (\n",
-        "    hf_hub_download(repo_id=REPO_ID, filename=FILENAME, local_dir=\"/content\")\n",
+        "    hf_hub_download(repo_id=REPO_ID, filename=FILENAME, local_dir=\"/content\", token=os.environ['HF_TOKEN'])\n",
         ")"
       ],
       "metadata": {
@@ -864,9 +864,9 @@
       "source": [
         "from mediapipe.tasks.python.genai.bundler import llm_bundler\n",
         "\n",
-        "def build_gemma3_1b_it_q8():\n",
-        "  output_file = \"/content/gemma3_1b_it_q8_ekv1280.task\"\n",
-        "  tflite_model = \"/content/gemma3_1b_finetune_q8_ekv1024.tflite\"\n",
+        "def build_gemma3_1b_it_block_q4():\n",
+        "  output_file = \"/content/gemma3_1b_finetune_q4_block32_ekv1024.task\"\n",
+        "  tflite_model = \"/content/gemma3_1b_finetune_q4_block32_ekv1024.tflite\"\n",
         "  tokenizer_model = (\n",
         "      \"/content/tokenizer.model\"\n",
         "  )\n",
@@ -883,7 +883,7 @@
         "  llm_bundler.create_bundle(config)\n",
         "\n",
         "# Build the MediaPipe task bundle.\n",
-        "build_gemma3_1b_it_q8()"
+        "build_gemma3_1b_it_block_q4()"
       ],
       "metadata": {
         "id": "hlOlionplVpt"
