--- a/codelabs/litert_inference/Gemma3_1b_fine_tune.ipynb
+++ b/codelabs/litert_inference/Gemma3_1b_fine_tune.ipynb
@@ -459,13 +459,14 @@
         "def convert_to_litert():\n",
         "  with torch.inference_mode(True):\n",
         "    pytorch_model = gemma3.build_model_1b(\n",
-        "      \"/content/merged_model\", kv_cache_max_len=KV_CACHE_MAX_LEN,\n",
+        "      \"/content/merged_model\", mask_cache_size=KV_CACHE_MAX_LEN,\n",
         "    )\n",
         "    converter.convert_to_tflite(\n",
         "        pytorch_model,\n",
         "        output_path=\"/content/\",\n",
         "        output_name_prefix=\"gemma3_1b_finetune\",\n",
         "        prefill_seq_len=PREFILL_SEQ_LENS,\n",
+        "        kv_cache_max_len=KV_CACHE_MAX_LEN,\n",
         "        quantize=converter.QuantizationName.DYNAMIC_INT4_BLOCK32,\n",
         "        lora_ranks=None,\n",
         "        export_config=_create_export_config(\n",
