--- a/codelabs/litert_inference/gemma3_1b_tflite.ipynb
+++ b/codelabs/litert_inference/gemma3_1b_tflite.ipynb
@@ -97,7 +97,7 @@
       "cell_type": "code",
       "source": [
         "from litert_tools.pipeline import pipeline\n",
-        "runner = pipeline.load(\"litert-community/Gemma3-1B-IT\", \"Gemma3-1B-IT_seq128_q8_ekv1280.task\")"
+        "runner = pipeline.load(\"Gemma3-1B-IT_seq128_q8_ekv1280.task\", repo_id=\"litert-community/Gemma3-1B-IT\")"
       ],
       "metadata": {
         "id": "3t47HAG2tvc3"
@@ -119,7 +119,7 @@
       "source": [
         "# Disclaimer: Model performance demonstrated with the Python API in this notebook is not representative of performance on a local device.\n",
         "prompt = \"What is the capital of France?\"\n",
-        "output = runner.generate(prompt, max_decode_steps=None)"
+        "output = runner.generate(prompt)"
       ],
       "metadata": {
         "id": "wT9BIiATkjzL"
